src/components/dropdown/_dropdown.scss
//
// Copyright IBM Corp. 2016, 2018
//
// This source code is licensed under the Apache-2.0 license found in the
// LICENSE file in the root directory of this source tree.
//

//-----------------------------
// Dropdown
//-----------------------------

@import '../../globals/scss/vars';
@import '../../globals/scss/helper-mixins';
@import '../../globals/scss/layer';
@import '../../globals/scss/import-once';
@import '../../globals/scss/css--reset';
@import '../../globals/scss/css--typography';
@import '../../globals/scss/layout';

@mixin dropdown {
  .#{$prefix}--dropdown {
    @include reset;
    @include font-family;
    @include typescale('zeta');
    position: relative;
    list-style: none;
    display: block;
    background-color: $field-01;
    border: none;
    box-shadow: 0 1px 0 0 $ui-05;
    order: 1;
    width: 100%;
    height: rem(40px);
    cursor: pointer;
    color: $text-01;

    &:focus {
      outline: none;
      box-shadow: 0 2px 0 0 $brand-01;
    }

    &.#{$prefix}--dropdown--open:focus {
      outline: 1px solid transparent;
      box-shadow: none;
    }

    .#{$prefix}--dropdown--open .#{$prefix}--dropdown-list {
      @include layer('overlay');
    }
  }

  .#{$prefix}--dropdown--light {
    background-color: $field-02;
  }

  .#{$prefix}--dropdown--up {
    .#{$prefix}--dropdown-list {
      bottom: 2.5rem;
    }
  }

  .#{$prefix}--dropdown__arrow {
    fill: $brand-01;
    position: absolute;
    right: 1rem;
    top: 1.175rem;
    width: rem(10px);
    height: rem(5px);
    pointer-events: none;
    transition: transform $transition--expansion $carbon--standard-easing;
    transform-origin: 50% 45%;
  }

  .#{$prefix}--dropdown[data-value=''] .#{$prefix}--dropdown-text {
    color: $text-01;
  }

  .#{$prefix}--dropdown-text {
    height: rem(40px);
    padding-top: rem(13px);
    padding-bottom: rem(13px);
    padding-left: $spacing-md;
    padding-right: $spacing-2xl;
    font-weight: 600;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    border: $input-border;
  }

  .#{$prefix}--dropdown-list {
    @include reset;
    @include layer('overlay');
    @include typescale('zeta');
    background-color: $ui-01;
    display: flex;
    flex-direction: column;
    width: 100%;
    list-style: none;
    position: absolute;
    z-index: z('dropdown');
    max-height: 0;
    transition: max-height $transition--expansion $carbon--ease-out;
    overflow: hidden;
  }

  .#{$prefix}--dropdown-item {
    transition: opacity $transition--expansion $carbon--ease-out;
    opacity: 0;
  }

  .#{$prefix}--dropdown-link {
    display: block;
    color: currentColor;
    text-decoration: none;
    font-weight: normal;
    padding: $spacing-md $spacing-lg $spacing-md $spacing-md;
    text-overflow: ellipsis;
    overflow: hidden;

    &:hover,
    &:focus {
      background-color: $hover-row;
      outline: 1px solid transparent;
      text-decoration: underline;
      color: $text-01;
    }
  }

  .#{$prefix}--dropdown--selected {
    display: none;
  }

  .#{$prefix}--dropdown--open {
    .#{$prefix}--dropdown__arrow {
      transform: rotate(-180deg);
    }

    .#{$prefix}--dropdown-list {
      max-height: 15rem;

      &:hover {
        overflow: auto;
      }
    }

    .#{$prefix}--dropdown-item {
      opacity: 1;
    }
  }

  .#{$prefix}--dropdown--disabled {
    opacity: 0.5;
    cursor: not-allowed;

    &:focus {
      outline: none;
    }
  }

  .#{$prefix}--dropdown--auto-width {
    width: auto;
    max-width: rem(400px);
  }

  .#{$prefix}--dropdown--inline {
    background-color: transparent;
    box-shadow: none;

    &:focus {
      outline: none;
      box-shadow: none;
    }

    &:focus .#{$prefix}--dropdown-text {
      @include focus-outline('border');
    }

    &[data-value=''] .#{$prefix}--dropdown-text {
      color: $brand-01;
    }

    .#{$prefix}--dropdown-text {
      display: inline-block;
      padding-right: 1.5rem;
      overflow: visible;
      color: $brand-01;
    }

    .#{$prefix}--dropdown-text:hover {
      background-color: $field-01;
    }

    &.#{$prefix}--dropdown--open:focus {
      box-shadow: none;
    }

    &.#{$prefix}--dropdown--open:focus .#{$prefix}--dropdown-list {
      @include layer('overlay');
    }

    &.#{$prefix}--dropdown--open:focus .#{$prefix}--dropdown-text {
      outline: none;
    }

    .#{$prefix}--dropdown__arrow {
      position: relative;
      top: -2px;
      left: 8px;
      right: 0;
      bottom: 0;
    }

    .#{$prefix}--dropdown-link {
      font-weight: normal;
    }

    .#{$prefix}--dropdown-link:hover {
      background-color: $field-01;
      color: $text-01;
    }
  }

  // Skeleton State
  .#{$prefix}--dropdown-v2.#{$prefix}--skeleton,
  .#{$prefix}--dropdown.#{$prefix}--skeleton {
    @include skeleton;
  }
}

@mixin dropdown--x {
  .#{$prefix}--dropdown {
    @include reset;
    @include font-family;
    @include typescale('zeta');
    @include focus-outline('reset');
    position: relative;
    list-style: none;
    display: block;
    background-color: $field-01;
    border: none;
    border-bottom: 1px solid $ui-04;
    width: 100%;
    height: rem(40px);
    cursor: pointer;
    color: $text-01;
    outline: 2px solid transparent;
    transition: $transition--base all;

    &:focus {
      @include focus-outline('outline');
    }

    &:hover {
      background-color: $hover-ui;
    }
  }

  .#{$prefix}--dropdown[data-invalid] {
    @include focus-outline('invalid');

    + .#{$prefix}--form-requirement {
      display: inline-block;
      max-height: rem(200px);
      color: $support-01;
    }
  }

  .#{$prefix}--dropdown__invalid {
    position: absolute;
    top: 50%;
    right: rem(34px);
    fill: $support-01;
    transform: translateY(-50%);
  }

  .#{$prefix}--dropdown--open {
    background-color: $hover-ui;

    &:hover .#{$prefix}--dropdown-link {
      border-bottom-color: transparent;
    }
  }

  .#{$prefix}--dropdown--open:focus {
    outline: 1px solid transparent;
    box-shadow: none;
  }

  .#{$prefix}--dropdown--open .#{$prefix}--dropdown-list {
    @include layer('overlay');
  }

  .#{$prefix}--dropdown--light {
    background-color: $field-02;
  }

  .#{$prefix}--dropdown--up .#{$prefix}--dropdown-list {
    bottom: 2rem;
  }

  .#{$prefix}--dropdown__arrow {
    fill: $ui-05;
    position: absolute;
    right: 1rem;
    top: rem(17px);
    width: rem(10px);
    height: rem(6px);
    pointer-events: none;
    transition: transform $transition--expansion $carbon--standard-easing;
    transform-origin: 50% 45%;
  }

  .#{$prefix}--dropdown[data-value=''] .#{$prefix}--dropdown-text {
    color: $text-01;
  }

  .#{$prefix}--dropdown-text {
    display: flex;
    align-items: center;
    height: rem(40px);
    padding-top: rem(12px);
    padding-bottom: rem(12px);
    padding-left: 1rem;
    padding-right: rem(42px); // 2rem + SVG width
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .#{$prefix}--dropdown-list {
    @include reset;
    @include layer('overlay');
    @include typescale('zeta');
    background-color: $ui-01;
    display: flex;
    flex-direction: column;
    width: 100%;
    list-style: none;
    position: absolute;
    z-index: z('dropdown');
    max-height: 0;
    transition: max-height $transition--expansion cubic-bezier(0, 0, 0.38, 0.9);
    overflow: hidden;
  }

  .#{$prefix}--dropdown-item {
    transition: opacity $transition--expansion cubic-bezier(0, 0, 0.38, 0.9), background-color $transition--base;
    opacity: 0;
    margin-top: -1px;

    &:hover {
      background-color: $hover-ui;
    }

    &:active {
      background-color: $active-ui;
    }

    &:first-of-type {
      padding-top: 3px;
    }
  }

  .#{$prefix}--dropdown-item:last-of-type .#{$prefix}--dropdown-link {
    border-bottom: none;
    margin-bottom: 2px;
  }

  .#{$prefix}--dropdown-link {
    @include focus-outline('reset');
    display: block;
    color: currentColor;
    text-decoration: none;
    font-weight: normal;
    line-height: rem(16px);
    padding: rem(11px) 0;
    margin: 0 1rem;
    border: 1px solid transparent;
    border-bottom: 1px solid $ui-03;
    text-overflow: ellipsis;
    overflow: hidden;

    &:focus {
      @include focus-outline('outline');
      margin: 0;
      padding: rem(11px) 1rem;
    }

    &:hover {
      color: $text-01;
    }
  }

  .#{$prefix}--dropdown-item:hover .#{$prefix}--dropdown-link {
    border-bottom-color: $hover-ui;
  }

  .#{$prefix}--dropdown--selected {
    display: none;
  }

  .#{$prefix}--dropdown--open .#{$prefix}--dropdown__arrow {
    transform: rotate(-180deg);
  }

  .#{$prefix}--dropdown--open .#{$prefix}--dropdown-list {
    max-height: 15rem;

    &:hover {
      overflow: auto;
    }
  }

  .#{$prefix}--dropdown--open .#{$prefix}--dropdown-item {
    opacity: 1;
  }

  .#{$prefix}--dropdown--disabled {
    opacity: 0.5;
    cursor: not-allowed;

    &:focus {
      outline: none;
    }
  }

  .#{$prefix}--dropdown--auto-width {
    width: auto;
    max-width: rem(400px);
  }

  .#{$prefix}--dropdown--inline {
    border-bottom-color: transparent;
    background-color: transparent;
    box-shadow: none;
    transition-property: none;

    &:focus {
      outline: none;
      box-shadow: none;
    }

    &:hover {
      background-color: $hover-ui;
    }
  }

  .#{$prefix}--dropdown--inline:focus .#{$prefix}--dropdown-text {
    outline: 2px solid $interactive-01;
  }

  .#{$prefix}--dropdown--inline[data-value=''] .#{$prefix}--dropdown-text {
    color: $text-01;
  }

  .#{$prefix}--dropdown--inline .#{$prefix}--dropdown-text {
    display: inline-block;
    padding-right: 1.5rem;
    overflow: visible;
    color: $text-01;
  }

  .#{$prefix}--dropdown--inline.#{$prefix}--dropdown--open:focus {
    box-shadow: none;
  }

  .#{$prefix}--dropdown--inline.#{$prefix}--dropdown--open:focus .#{$prefix}--dropdown-list {
    @include layer('overlay');
  }

  .#{$prefix}--dropdown--inline.#{$prefix}--dropdown--open:focus .#{$prefix}--dropdown-text {
    outline: none;
  }

  .#{$prefix}--dropdown--inline .#{$prefix}--dropdown-item:first-of-type {
    padding-top: 3px;
  }

  .#{$prefix}--dropdown--inline .#{$prefix}--dropdown__arrow {
    position: relative;
    top: -2px;
    left: 8px;
    right: 0;
    bottom: 0;
  }

  .#{$prefix}--dropdown--inline .#{$prefix}--dropdown-link {
    font-weight: normal;
  }

  // Skeleton State
  .#{$prefix}--dropdown-v2.#{$prefix}--skeleton,
  .#{$prefix}--dropdown.#{$prefix}--skeleton {
    @include skeleton;
  }
}

@include exports('dropdown') {
  @if feature-flag-enabled('components-x') {
    @include dropdown--x;
  } @else {
    @include dropdown;
  }
}

